<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/idTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="176dp"
                            android:layout_height="wrap_content"
                            android:hint="@string/nama_depan" />
                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <android.support.design.widget.TextInputEditText
                            android:layout_width="387dp"
                            android:layout_height="match_parent"
                            android:hint="@string/nama_belakang" />
                    </android.support.design.widget.TextInputLayout>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="71dp">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tempat_lahir" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/tempat_lahir" />
                    </android.support.design.widget.TextInputLayout>


                </TableRow>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="122dp"
                        android:hint="@string/alamat" />
                </android.support.design.widget.TextInputLayout>
            </TableLayout>

            <TextView
                android:id="@+id/idJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/jenis_kelamin"
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="normal" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <TableRow>
                    <RadioButton
                        android:id="@+id/idLakiLaki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/laki_laki" />
                    <RadioButton
                        android:id="@+id/idPerempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/perempuan" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/idAgama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:text="@string/jenis_kelamin"
                android:textAlignment="textStart"
                android:textColor="@color/grey"
                android:textSize="18sp"
                android:textStyle="normal" />
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <TableRow>
                    <RadioButton
                        android:id="@+id/idIslam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/islam"/>
                    <RadioButton
                        android:id="@+id/idKristen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/kristen" />
                </TableRow>
                <TableRow>
                    <RadioButton
                        android:id="@+id/idKatolik"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/katolik"/>
                    <RadioButton
                        android:id="@+id/idHindu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/hindu" />
                </TableRow>
                <TableRow>
                    <RadioButton
                        android:id="@+id/idBuddha"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Buddha"/>
                    <RadioButton
                        android:id="@+id/idKonghucu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/Konghucu" />
                </TableRow>
                <RadioButton
                    android:id="@+id/idAliranKepercayaan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/aliran_kepercayaan" />
            </TableLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"
                    android:hint="@string/telepon" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp">
                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password_kembali" />
            </android.support.design.widget.TextInputLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">
                <TableRow>
                    <Button
                        android:id="@+id/btnkembali"
                        android:layout_width="150dp"
                        android:layout_height="49dp"
                        android:layout_gravity="end"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/grey"
                        android:text="@string/kembali"/>
                    <Button
                        android:id="@+id/btndaftar"
                        android:layout_width="150dp"
                        android:layout_height="49dp"
                        android:layout_gravity="end"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/grey"
                        android:text="@string/daftar"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>